[tool.poetry]
name = "vnseg"
version = "0.1.0"
description = ""
authors = ["Justin <jbtcao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
pyvi = "^0.0.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
