[tool.poetry]
name = "vnsegapi"
version = "0.1.0"
description = ""
authors = ["Justin <jbtcao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
pyvi = "^0.0.9"
waitress = "^1.3"
flask-cors = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
invoke = "^1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
