[tool.poetry]
name = "vnsegapi"
version = "0.1.0"
description = ""
authors = ["Justin <jbtcao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
pyvi = "^0.0.9"
waitress = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
invoke = "^1.2"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pylint = "^2.3"
hypothesis = "^4.24"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
